[gd_scene load_steps=2 format=3 uid="uid://ir4du5jg81l1"]

[ext_resource type="Script" path="res://Scripts/MainMenu.gd" id="1_prlca"]

[node name="Game Over" type="Node2D"]
script = ExtResource("1_prlca")

[node name="Label" type="Label" parent="."]
offset_left = 323.0
offset_top = 5.0
offset_right = 896.0
offset_bottom = 145.0
theme_override_font_sizes/font_size = 100
text = "Game Over!"
horizontal_alignment = 1

[node name="Button" type="Button" parent="."]
offset_left = 400.0
offset_top = 398.0
offset_right = 816.0
offset_bottom = 526.0
theme_override_font_sizes/font_size = 40
text = "Return to Main Menu"

[connection signal="pressed" from="Button" to="." method="_on_return_to_menu_button_pressed"]
